see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Jul-2010 Jean-Marie Simonet
 $ Changing all occurences of :: to : : in strings' values to avoid breaking tooltips
 
21-Jul-2010 Andrew Eddie
 # [#21430] User Manager - Blank page if new password and confirmation do not match (Al Kent).
 # [#21451] Article field "xreference" available in views in 1.5 but missing in 1.6 (Andrea Tarr).
 # [#21349] Manage view of com_installer does not use the default_item.php sub-template (Rune Sjøen).
 # [#21464] bitfolge feedcreator is unnecessary (Hannes Papenberg, Amy Stephen).

20-Jul-2010 Jean-Marie Simonet
 # [#21495] Tooltip max-width insufficient
 # [#21484] Plugin manger error in Hathor from typo in earlier patch. Thanks Andrea.

20-Jul-2010 Sam Moffatt
 # Fixed non-updates appear in update list

19-Jul-2010 Jean-Marie Simonet
 # [#21172] Article pagination display. Thanks Bill.
 # [#21389] Missing addition of css class "parent" to <li> tag for parent item in menu.
 # [#21369] New menu item - Metadata options - Show Page Heading. Thanks Bill.
 # [#21455] XML self closing syntax used on a div. Thanks Rune.
 $ [#21454] Login module refers to non-existing. Thanks Michael
 $ Deleting redundant string
 $ [#21424] Untranslated strings: Default captions for various functions in JToolBarHelper class (Part 1) Tks CY Lee
 $ [#21425] Untranslated strings: Default captions for various functions in JToolBarHelper class (Part 2) Tks CY Lee

16-Jul-2010 Jean-Marie Simonet
 # Missing $user in banners and Newsfeed controllers
 # [#21378] Mootols (and possibly other js/css) not loading with cache on. Thanks Klas.