@@ -74,6 +74,10 @@ COM_TEMPLATES_TEMPLATE_EDIT_PRINTVIEW="Edit print view template"
 COM_TEMPLATES_TEMPLATE_FILENAME="Editing file "_QQ_"%s"_QQ_" in template "_QQ_"%s"_QQ_"."
 COM_TEMPLATES_TEMPLATE_MASTER_FILES="Template Master Files"
 COM_TEMPLATES_TEMPLATE_NOT_SPECIFIED="Template not specified."
+COM_TEMPLATES_TEMPLATE_PREVIEW="Preview"
+COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available"
+COM_TEMPLATES_TEMPLATE_NO_PREVIEW_DESC="To enable template previews, enable the 'Debug Modules' option in global the configuration"
+COM_TEMPLATES_TEMPLATE_NO_PREVIEW_ADMIN="No preview available for Administrator templates"
 COM_TEMPLATES_TEMPLATES_FILTER_CLIENT="Client"
 COM_TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC="Search in template name or folder name."
 COM_TEMPLATES_TOOLBAR_SET_HOME="Make Default"
